[gd_scene load_steps=11 format=2]

[ext_resource path="res://enemies/RedSkeleton.gd" type="Script" id=1]
[ext_resource path="res://Hitbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://textures/Enemies.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 8, 15 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 3 )
region = Rect2( 64, 96, 16, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 80, 96, 16, 32 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "Stopped",
"speed": 5.0
}, {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "Walking",
"speed": 3.0
} ]

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 112, 112, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 112, 96, 16, 16 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 5 ) ],
"loop": false,
"name": "Down",
"speed": 5.0
}, {
"frames": [ SubResource( 4 ), SubResource( 5 ) ],
"loop": false,
"name": "Falling",
"speed": 1.75
}, {
"frames": [ SubResource( 5 ), SubResource( 4 ) ],
"loop": false,
"name": "Rising",
"speed": 1.75
} ]

[node name="RedSkeleton" type="KinematicBody2D" groups=["AffectedByClock", "AffectedByRosary"]]
collision_layer = 8
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1 )
shape = SubResource( 7 )

[node name="Hitbox" parent="." instance=ExtResource( 2 )]
collision_mask = 6

[node name="HitShape" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 0, 1 )
shape = SubResource( 7 )

[node name="Sprites" type="Node2D" parent="."]

[node name="StandingSprite" type="AnimatedSprite" parent="Sprites"]
frames = SubResource( 3 )
animation = "Stopped"
playing = true

[node name="DownSprite" type="AnimatedSprite" parent="Sprites"]
visible = false
position = Vector2( 0, 8 )
frames = SubResource( 6 )
animation = "Down"

[node name="Timer" type="Timer" parent="."]

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
rect = Rect2( -8, -12, 16, 24 )

[connection signal="hit" from="Hitbox" to="." method="_on_Hitbox_hit"]
[connection signal="hit_simon" from="Hitbox" to="." method="_on_Hitbox_hit_simon"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered" flags=6]
